--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </div>
 
 
-<img class="profilepic" src="images/newimg.jpg" alt="">
+<img class="profilepic" src="./images/newimg.jpg" alt="">
 
 
 <!--skill-->
